Cleanup
Added final when required, included serial when beneficial for easier code reading